Audit skill workflows and harden installation and research records